Log message in InitialSyncer for setting begin applying timestamp is incorrect

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • v5.0, v4.4, v4.2, v4.0
    • Repl 2021-06-14
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      We log the last oplog entry on our sync source, which is used to set the begin applying timestamp for initial sync. Instead of actually logging the last oplog entry, this logs the fcv document fetched from the sync source.

            Assignee:
            Carolyn Duan (Inactive)
            Reporter:
            Samyukta Lanka
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: