SERVER-44316 Remove incorrect log message in initial_syncer.cpp

(cherry picked from commit f1370eb80c66f1439bc2ea135a2bf25e80eda1ed)